--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "json-server": "^0.17.3"
   }
 }
